[package]
name = "karusel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
accessibility-sys = "0.1.3"
appkit-nsworkspace-bindings = "0.1.0"
cocoa = "0.24.0"
core-foundation = "0.9.3"
core-graphics = "0.22.3"
objc = "0.2.7"
objc-foundation = "0.1.1"
objc_id = "0.1.1"
plist = "1.3.1"
rdev = "0.5.1"
serde = { version = "1.0.136", features = ["derive"] }
tao = "0.8.2"
